--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@
 
 <section class="stat">
     <h2 class="stat__title">The most popular sales platform in country</h2>
-    <div class="stat__text">
+    <div class="stat__main">
         <div class="stat__box">
-            <img src="assets/person.svg" alt="person" class="img__person">
+            <div class="stat--circule circule--red"></div>
+            <img src="assets/person.svg" alt="person" class="img img__person">
             <p class="stat__numbers">100000+</p>
             <p class="stat__description">daily entries</p></div>
         <div class="stat__box">
-            <img src="assets/eye.svg" alt="eye" class="img__eye">
+            <div class="stat--circule circule--blue"></div>
+            <img src="assets/eye.svg" alt="eye" class="img img__eye">
             <p class="stat__numbers">2000000+</p>
             <p class="stat__description">seen products every day</p></div>
         <div class="stat__box">
-            <img src="assets/catalog.svg" alt="catalog" class="img__catalog">
+            <div class="stat--circule circule--green"></div>
+            <img src="assets/catalog.svg" alt="catalog" class="img img__catalog">
             <p class="stat__numbers">10000+</p>
             <p class="stat__description">added posts daily</p></div>
     </div>
@@ -68,28 +71,28 @@
     </div>
 
     <div class="benefits__container">
-        <div class="background--iphone">
+        <div class="benefits_icons">
+            <div class="background--iphone"></div>
             <img src="assets/iPhone.png" alt="iphone" class="benefits__img__iphone">
         </div>
-    </div>
         <div class="benefits__box">
             <h3 class="benefits_title">Your shop is where you are!</h3>
             <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             <div class="benefits_line line--blue></div>
         </div>
     </div>
-
-    <div class="benefits__last-row>
-        <div class="benefits__box2">
-            <h3 class="benefits_title">Your shop is where you are!</h3>
-            <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <div class="benefits_line line--green"></div>
-        </div>
+    <div class="benefits__container__down>
+                <div class="benefits__box2">
+                    <h3 class="benefits_title">Your shop is where you are!</h3>
+                    <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="benefits_line line--green"></div>
+                </div>
+                <div class="benefits icons">
                 <div class="block__color">
-            <img src="assets/trumpet.png" alt="trumpet" class="benefits__img__trumpet">
+                    <img src="assets/trumpet.png" alt="trumpet" class="benefits__img__trumpet"></div>
             </div>
-    </div>
-
+            </div>
+        </div>
 </section>
 
 <section class="pricing">
@@ -182,25 +185,37 @@
     <p class="contact__text">Leave your email address or call us!</p>
     <div class="contact__icons">
     <img src="assets/mail icon.svg" alt="mail icon" class="contact-icon">
-    <p class="contact__data">info@bestshop.xyz</p>
+    <p class="contact__data data--mail">info@bestshop.xyz</p>
     <img src="assets/phone icon.svg" alt="phone icon" class="contact-icon">
-    <p class="contact__data" >123 456 789</p>
+    <p class="contact__data data--number" >123 456 789</p>
     </div>
 </section>
 <form action="">
-    <label for="name">NAME</label>
+    <label for="name" class="label__name">NAME</label>
         <input type="name" id="name">
-    <label for="email">EMAIL</label>
+    <label for="email" class="label__email">EMAIL</label>
         <input type="email" id="email">
     <label for="agreement">
-        <input type="checkbox" name="agreement">
+        <div class="agreement">
+        <input type="checkbox" id="agreement">
         <p>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
-    </label>
-<bottom>Send</bottom>
+        </div></label>
+<button>Send</button>
 </form>
 </div>
 
-
+<footer>
+    <div class="container footer__container">
+    <div class="footer__company">
+    <span class="footer__logo">BestShop</span>
+    <p class="copyright">© 2019 BestShop LTD, All Rights Reserved</p>
+    </div>
+    <div class="footer__icons">
+        <img src="assets/twitter.svg" alt="twitter">
+        <img src="assets/facebook.svg" alt="facebook">
+    </div>
+    </div>
+</footer>
 
 </body>
 </html>
