--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel= "stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel= "stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -113,7 +113,7 @@
             <div class="box__title">Basic</div>
             <div class="price price--basic">$0</div>
             <span></span>
-            <ul class="pricing--items">
+            <ul class="pricing--items items--basic">
             <li><div class="pricing__text pricing--checked">100 MB HDD</div></li>
             <li><div class="pricing__text pricing--checked">1 Subdomain</div></li>
             <li><div class="pricing__text pricing--checked">2 E-mails</div></li>
@@ -125,8 +125,8 @@
         <div class="pricing__box pricing__box--professional">
             <div class="box__title title--professional">Professional</div>
             <div class="price price--professional">$25</div>
-            <div class="pricing__text text--litlle">Limited offer</div>
-            <ul class="pricing-items">
+            <div class="pricing__text text--litlle text--litlle--professional">Limited offer</div>
+            <ul class="pricing-items items--professional">
                 <li><div class="pricing__text pricing--checked">500 MB HDD</div></li>
                 <li><div class="pricing__text pricing--checked">2 Subdomains</div></li>
                 <li><div class="pricing__text pricing--checked">5 E-mails</div></li>
@@ -139,7 +139,7 @@
             <div class="box__title">Premium</div>
             <div class="price price--premium">$60</div>
             <div class="pricing__text text--litlle">Limited offer</div>
-            <ul class="pricing-items">
+            <ul class="pricing-items items--premium">
                 <li><div class="pricing__text pricing--checked">2 GB HDD</div></li>
                 <li><div class="pricing__text pricing--checked">5 Subdomains</div></li>
                 <li><div class="pricing__text pricing--checked">20 E-mails</div></li>
