--- a/index.html
+++ b/index.html
@@ -32,20 +32,18 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <span></span>
-                <!-- <i class="fas fa-bars"></i> -->
             </label>
             <ul class="menu__list">
-                <li class="menu__elements">
+                <li class="menu__element">
                     <a href="" class="menu__link">WHY US</a>
                 </li>
-                <li class="menu__elements">
+                <li class="menu__element">
                     <a href="" class="menu__link">BENEFITS</a>
                 </li>
-                <li class="menu__elements">
+                <li class="menu__element">
                     <a href="" class="menu__link">PRICES</a>
                 </li>
-                <li class="menu__elements">
+                <li class="menu__element">
                     <a href="" class="menu__link">CONTACT</a>
                 </li>
             </ul>
